iac/k8s/localstack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: localstack
  labels:
    app.kubernetes.io/name: localstack
    app.kubernetes.io/part-of: aws-saa-lab
