iac/k8s/localstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack
  namespace: localstack
  labels:
    app.kubernetes.io/name: localstack
    app.kubernetes.io/part-of: aws-saa-lab
spec:
  rules:
    - host: localstack.dungxbuif.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localstack
                port:
                  number: 4566
